[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/characters/team_a_campaigner.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/ui_elements/overall_candidate_projection_container.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="OverallCandidateProjectionContainer" type="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 896.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
script = ExtResource( 3 )

[node name="RichTextContainer" type="VBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 140.0
rect_min_size = Vector2( 300, 0 )
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="RichTextContainer"]
margin_top = 22.0
margin_right = 300.0
margin_bottom = 118.0
rect_min_size = Vector2( 300, 96 )
size_flags_horizontal = 3
custom_colors/default_color = Color( 0.537255, 0.537255, 0.537255, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "
[center][wave amp=50 freq=5]close race[/wave][/center]"
text = "
close race"

[node name="CandidateTextureRect" type="TextureRect" parent="."]
margin_left = 310.0
margin_right = 406.0
margin_bottom = 140.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="PredictedPointsLabel" type="Label" parent="."]
margin_left = 416.0
margin_right = 896.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "predicted to win in 2 areas (Green, Snowy)"
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/appear = SubResource( 4 )
